--- a/PreFood/app/index.html
+++ b/PreFood/app/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html lang="en" ng-app="preFood" class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html lang="en" ng-app="preFood" class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html lang="en" ng-app="preFood" class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html lang="en" ng-app="preFood" class="no-js"> <!--<![endif]-->
+<!--[if lt IE 7]>      <html lang="en" ng-app="preFoodModule" class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>         <html lang="en" ng-app="preFoodModule" class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>         <html lang="en" ng-app="preFoodModule" class="no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]><!--> <html lang="en" ng-app="preFoodModule" class="no-js"> <!--<![endif]-->
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,26 +12,29 @@
   <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/normalize.css">
   <link rel="stylesheet" href="css/bootsrap-theme.css">
   <link rel="stylesheet" href="css/bootstarp.css">
+  <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/main.css">
   <link rel="stylesheet" href="app.css">
   <script src="bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
   <base href="#">
 </head>
-<body ng-app="preFood" ng-controller="FoodCtrl">
+<body ng-app="preFoodModule" ng-controller="FoodCtrl">
 <nav class="navbar navbar-default">
-  <div class="container-fluid">
+  <div class="container-fluid" style="background-color: aliceblue;">
+    <span class="nav navbar-header" style="margin-top: 15px;color: orange;">Pre-Order Food</span>
     <ul class="nav navbar-nav">
-      <li ng-repeat="category in categories" ng-click="setCurrentCategory(category)"><a href="#{{category.name}}">{{category.name}}</a></li>
+      <li ng-repeat="category in categories" ng-click="getItems(category)"><a href="#{{category.name}}">{{category.name}}</a></li>
     </ul>
   </div>
 </nav>
 <div class="container-fluid">
   <ul>
-    <li ng-repeat="item in items | filter:{category:currentCategory.name}">{{item.name}}</li>
+    <li ng-repeat="item in items | filter:{category:currentCategory.name}" class="col-lg-4"><a href="#/{{item.category}}/{{item.id}}">{{item.name}}</a></li>
   </ul>
 </div>
+<div ng-view></div>
   <!--ul class="menu">
-    <li><a href="#!/view1">view1</a></li>
+    <li><a href="#!/view">view</a></li>
     <li><a href="#!/view2">view2</a></li>
   </ul-->
 
@@ -51,8 +54,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.6/angular-route.min.js" type="text/javascript"></script>
   <script src="libs/bootstrap.js"></script>
   <script src="app.js"></script>
-  <script src="view1/view1.js"></script>
-  <script src="view2/view2.js"></script>
+  <script src="controllers/PizzaCtrl.js"></script>
   <script src="components/version/version.js"></script>
   <script src="components/version/version-directive.js"></script>
   <script src="components/version/interpolate-filter.js"></script>
